# gelite

./: .cspell.json  .gitignore  AGENTS.md  AI_POLICY.md  CONTRIBUTING.md  Cargo.toml  README.ko.md  README.md  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: rust.yml  sonarcloud.yml
engine/: Cargo.toml
engine/crates/dev-cli/: Cargo.toml
engine/crates/dev-cli/src/: main.rs
engine/crates/ir/: Cargo.toml
engine/crates/ir/src/: lib.rs
engine/crates/ir/src/tests/: fixtures.rs  mod.rs
engine/crates/query-ast/: Cargo.toml
engine/crates/query-ast/src/: lib.rs
engine/crates/query-ast/src/tests/: mod.rs
engine/crates/query-ir/: Cargo.toml
engine/crates/query-ir/src/: lib.rs
engine/crates/query-ir/src/tests/: mod.rs
engine/crates/query-parser/: Cargo.toml
engine/crates/query-parser/src/: lexer.rs  lib.rs  parser.rs
engine/crates/query-parser/src/tests/: mod.rs
engine/crates/repl/: Cargo.toml
engine/crates/repl/src/: main.rs
engine/crates/resolver/: Cargo.toml
engine/crates/resolver/src/: lib.rs
engine/crates/resolver/src/tests/: fixtures.rs  mod.rs
engine/crates/schema-parser/: Cargo.toml
engine/crates/schema-parser/src/: lexer.rs  lib.rs  parser.rs
engine/crates/schema-parser/src/tests/: mod.rs
engine/crates/schema/src/: lib.rs
engine/crates/schema/src/tests/: fixtures.rs  mod.rs
engine/crates/sqlite-plan/: Cargo.toml
engine/crates/sqlite-plan/src/: lib.rs
engine/crates/sqlite-plan/src/tests/: fixtures.rs  mod.rs
engine/crates/sqlite-query-plan/: Cargo.toml
engine/crates/sqlite-query-plan/src/: lib.rs
engine/crates/sqlite-query-plan/src/tests/: fixtures.rs  mod.rs
engine/crates/sqlite-query-sqlgen/: Cargo.toml
engine/crates/sqlite-query-sqlgen/src/: lib.rs
engine/crates/sqlite-query-sqlgen/src/tests/: fixtures.rs  mod.rs
engine/crates/sqlite-runner/: Cargo.toml
engine/crates/sqlite-runner/src/: lib.rs  native.rs  wasm.rs
engine/crates/sqlite-runner/src/tests/: fixtures.rs  mod.rs  native.rs
engine/crates/sqlite-schema/: Cargo.toml
engine/crates/sqlite-schema-plan/src/tests/: mod.rs
engine/crates/sqlite-schema-sqlgen/: Cargo.toml
engine/crates/sqlite-schema-sqlgen/src/: lib.rs
engine/crates/sqlite-schema-sqlgen/src/tests/: mod.rs
engine/crates/sqlite-schema/src/: lib.rs
engine/crates/sqlite-schema/src/tests/: mod.rs
engine/crates/sqlite-sqlgen/: Cargo.toml
engine/crates/sqlite-sqlgen/src/: lib.rs
engine/crates/sqlite-sqlgen/src/tests/: fixtures.rs  mod.rs
engine/query-ast/src/: lib.rs
engine/query-ast/src/tests/: mod.rs
engine/query-ir/src/: lib.rs
engine/query-ir/src/tests/: fixtures.rs  mod.rs
engine/query-parser/src/: lexer.rs  lib.rs  parser.rs
engine/query-parser/src/tests/: fixtures.rs  insert.rs  mod.rs  select.rs
engine/query-resolver/: Cargo.toml
engine/query-resolver/src/: lib.rs
engine/query-resolver/src/tests/: fixtures.rs  insert.rs  mod.rs  select.rs
engine/schema-model/: Cargo.toml
engine/schema-parser/: Cargo.toml
engine/schema-parser/src/: lib.rs  parser.rs
engine/schema-parser/src/tests/: mod.rs
engine/sqlite-query-plan/src/: lib.rs
engine/sqlite-query-plan/src/tests/: fixtures.rs  insert.rs  mod.rs  select.rs
engine/sqlite-query-sqlgen/: Cargo.toml
engine/sqlite-query-sqlgen/src/: lib.rs
engine/sqlite-query-sqlgen/src/tests/: fixtures.rs  insert.rs  mod.rs  select.rs
engine/sqlite-runner/: Cargo.toml  build.rs
engine/sqlite-runner/src/: lib.rs  native.rs
engine/sqlite-runner/src/tests/: fixtures.rs  mod.rs  native.rs
engine/sqlite-schema-plan/: Cargo.toml
engine/sqlite-schema-plan/src/: lib.rs
engine/sqlite-schema-plan/src/tests/: mod.rs
engine/sqlite-schema-sqlgen/: Cargo.toml
engine/sqlite-schema-sqlgen/src/: lib.rs
engine/sqlite-schema-sqlgen/src/tests/: mod.rs
examples/: blog.geli
plan/: cli-and-tooling-plan.md  implementation-start-plan.md  new-db-engine-design.md  new-db-engine-plan.md  query-expression-model-plan.md  query-parser-implementation-plan.md  schema-parser-implementation-plan.md  select-path-traversal-plan.md  sqlite-plan-implementation-plan.md  sqlite-query-plan-implementation-plan.md  sqlite-schema-implementation-plan.md  sqlite-schema-plan-implementation-plan.md
spec/: ir.md  query.md  schema.md  sqlite-query-plan.md  storage-sqlite.md
tests/query-pipeline/: Cargo.toml
tests/query-pipeline/src/: lib.rs
tests/query-pipeline/tests/: select_execution.rs  select_membership.rs
tools/gelite-cli/: Cargo.toml
tools/gelite-cli/src/: main.rs
tools/gelite-commands/: Cargo.toml
tools/gelite-commands/src/: lib.rs
tools/gelite-commands/src/tests/: fixtures.rs  mod.rs
tools/repl/: Cargo.toml
tools/repl/src/: lib.rs  main.rs
