[workspace]
members = [
  "engine/crates/schema-model",
  "engine/crates/query-ast",
  "engine/crates/query-ir",
  "engine/crates/query-resolver",
  "engine/crates/sqlite-query-plan",
  "engine/crates/sqlite-schema-plan",
  "engine/crates/sqlite-schema-sqlgen",
  "engine/crates/sqlite-runner",
  "engine/crates/sqlite-query-sqlgen",
  "engine/crates/query-parser",
  "engine/crates/schema-parser",
  "tools/gelite-commands",
  "tools/gelite-cli",
  "tools/repl",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
