[workspace]
members = [
  "engine/schema-model",
  "engine/query-ast",
  "engine/query-ir",
  "engine/query-resolver",
  "engine/sqlite-query-plan",
  "engine/sqlite-schema-plan",
  "engine/sqlite-schema-sqlgen",
  "engine/sqlite-runner",
  "engine/sqlite-query-sqlgen",
  "engine/query-parser",
  "engine/schema-parser",
  "tools/gelite-commands",
  "tools/gelite-cli",
  "tools/repl",
  "tests/query-pipeline",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
