[package]
name = "sqlite-runner"
version.workspace = true
edition.workspace = true

[dependencies]
powersync_sqlite_nostd = { version = "0.4.14", optional = true }
schema-model = { path = "../schema-model" }
sqlite-query-sqlgen = { path = "../sqlite-query-sqlgen" }
sqlite-schema-plan = { path = "../sqlite-schema-plan" }
sqlite-schema-sqlgen = { path = "../sqlite-schema-sqlgen" }

[features]
default = []
native = ["sqlite-nostd-static"]
wasm = ["sqlite-nostd-extension"]
sqlite-nostd-static = ["dep:powersync_sqlite_nostd", "powersync_sqlite_nostd/static"]
sqlite-nostd-extension = ["dep:powersync_sqlite_nostd"]
