[package]
name = "gelite-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gelite"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
gelite-commands = { path = "../gelite-commands" }
repl = { path = "../repl" }
schema-parser = { path = "../../engine/crates/schema-parser" }
