[package]
name = "gelite-commands"
version.workspace = true
edition.workspace = true

[dependencies]
schema-parser = { path = "../../engine/schema-parser" }
sqlite-schema-plan = { path = "../../engine/sqlite-schema-plan" }
sqlite-schema-sqlgen = { path = "../../engine/sqlite-schema-sqlgen" }
sqlite-runner = { path = "../../engine/sqlite-runner" }
