[package]
name = "repl"
version.workspace = true
edition.workspace = true

[dependencies]
schema-model = { path = "../../engine/crates/schema-model" }
query-ast = { path = "../../engine/crates/query-ast" }
query-parser = { path = "../../engine/crates/query-parser" }
query-ir = { path = "../../engine/crates/query-ir" }
query-resolver = { path = "../../engine/crates/query-resolver" }
sqlite-query-plan = { path = "../../engine/crates/sqlite-query-plan" }
sqlite-query-sqlgen = { path = "../../engine/crates/sqlite-query-sqlgen" }
sqlite-runner = { path = "../../engine/crates/sqlite-runner" }
rustyline = "18"
