[package]
name = "repl"
version.workspace = true
edition.workspace = true

[dependencies]
schema-model = { path = "../../engine/schema-model" }
query-ast = { path = "../../engine/query-ast" }
query-parser = { path = "../../engine/query-parser" }
query-ir = { path = "../../engine/query-ir" }
query-resolver = { path = "../../engine/query-resolver" }
sqlite-query-plan = { path = "../../engine/sqlite-query-plan" }
sqlite-query-sqlgen = { path = "../../engine/sqlite-query-sqlgen" }
sqlite-runner = { path = "../../engine/sqlite-runner" }
rustyline = "18"
