[package]
name = "dev-cli"
version.workspace = true
edition.workspace = true

[dependencies]
schema = { path = "../schema" }
query-ast = { path = "../query-ast" }
ir = { path = "../ir" }
resolver = { path = "../resolver" }
sqlite-plan = { path = "../sqlite-plan" }
sqlite-sqlgen = { path = "../sqlite-sqlgen" }
