[package]
name = "repl"
version.workspace = true
edition.workspace = true

[dependencies]
schema = { path = "../schema" }
query-ast = { path = "../query-ast" }
query-parser = { path = "../query-parser" }
ir = { path = "../ir" }
resolver = { path = "../resolver" }
sqlite-plan = { path = "../sqlite-plan" }
sqlite-sqlgen = { path = "../sqlite-sqlgen" }
